@@ -3,6 +3,7 @@ package com.ssafy.jdbc.melodiket.concert.service.contract;
 import com.ssafy.jdbc.melodiket.blockchain.config.BlockchainConfig;
 import lombok.extern.slf4j.Slf4j;
 import org.web3j.abi.datatypes.Function;
+import org.web3j.abi.datatypes.Utf8String;
 import org.web3j.abi.datatypes.generated.Uint256;
 import org.web3j.crypto.Credentials;
 import org.web3j.protocol.core.RemoteFunctionCall;
@@ -13,6 +14,7 @@ import org.web3j.tx.Contract;
 import java.math.BigInteger;
 import java.util.Collections;
 import java.util.List;
+import java.util.UUID;
 
 @Slf4j
 public class MusicianContract extends Contract {
@@ -20,10 +22,10 @@ public class MusicianContract extends Contract {
         super(blockchainConfig.getMelodiketContractAddress(), blockchainConfig.web3j(), credentials, BigInteger.valueOf(blockchainConfig.getGasPrice()), BigInteger.valueOf(blockchainConfig.getGasLimit()));
     }
 
-    public boolean agreeToConcert(long concertId) throws Exception {
+    public boolean agreeToConcert(UUID concertUuid) throws Exception {
         RemoteFunctionCall<TransactionReceipt> functionCall = executeRemoteCallTransaction(new Function(
                 "agreeToConcert",
-                List.of(new Uint256(BigInteger.valueOf(concertId))),
+                Collections.singletonList(new Utf8String(concertUuid.toString())),
                 Collections.emptyList()
         ));
 
@@ -37,10 +39,10 @@ public class MusicianContract extends Contract {
         }
     }
 
-    public boolean denyToConcert(long concertId) throws Exception {
+    public boolean denyToConcert(UUID concertUuid) throws Exception {
         RemoteFunctionCall<TransactionReceipt> functionCall = executeRemoteCallTransaction(new Function(
                 "denyToConcert",
-                List.of(new Uint256(BigInteger.valueOf(concertId))),
+                Collections.singletonList(new Utf8String(concertUuid.toString())),
                 Collections.emptyList()
         ));
 
